--- a/frontend/public/css/index.css
+++ b/frontend/public/css/index.css
@@ -50,6 +50,25 @@
     border-radius: 8px;
 }
 
+.loading{
+    display: none;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(204, 204, 204, 0.538);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loading img{
+    width: 35%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 @media screen and (max-width: 768px) {
     .container-content{
         text-align: center;
