Bugs de respostas corrigidos e melhorias no layout geral

--- a/frontend/public/css/menu.css
+++ b/frontend/public/css/menu.css
@@ -337,7 +337,8 @@ h2 {
     }
 
     .footer{
-        margin-top: 240vh;
+        /* margin-top: 240vh; */
+        margin-top: 20px;
     }
 
     .col.four {
