--- a/frontend/public/css/login.css
+++ b/frontend/public/css/login.css
@@ -5,23 +5,54 @@
     font-family: 'Noto Sans', sans-serif;
 }
 
+body{
+    background-image: url('../images/login/bg-login.png'); 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    background-position: center;
+}
+
 .container .image-login img{
-    width: 60%;
+    width: 50%;
 }
 
 .container{
     background-color: white;
     height: 100vh;
-    width: 60%;
+    width: 40%;
     float: right;
     box-shadow: -10px 5px 10px rgba(0, 0, 0, 0.438);
 }
 
-
 .container .form-login{
-    /* margin-top: 20%; */
+    margin-top: 20%;
     transform: translate(0, 20%);
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    body{
+        background-image: url('../images/login/img_mobile_back.jpg');
+        background-position: center;
+        background-size: 175%;
+        background-repeat: no-repeat;
+    }
+
+    .container{
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30%;
+        position: static;
+        width: 95%;
+        height: 50vh;
+        border-radius: 5px;
+    }
+
+    .container .form-login{
+        
+    }
+
 }
 
 .container-input{
