--- a/frontend/public/css/modules/questions.css
+++ b/frontend/public/css/modules/questions.css
@@ -7,6 +7,7 @@
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100vh;
+    z-index: 99999;
 }
 
 .container-question{
@@ -34,7 +35,7 @@
 
 .question{
     background-color: rgba(204, 204, 204, 0.671);
-    min-height: 200px;
+    /* min-height: 200px; */
     padding: 15px;
     text-align: center;
     border-radius: 5px;
