--- a/frontend/public/css/modules/class.css
+++ b/frontend/public/css/modules/class.css
@@ -8,11 +8,16 @@
     padding: 10px;
 }
 
+.selected{
+    color: red !important;
+}
+
 @media screen and (max-width: 768px) {
     .module-menu{
         float: none;
         width: 100%;
         max-height: 25vh;
+        border-bottom: 1px solid #ccc;
     }
     
     .module .class-content{
