--- a/frontend/public/css/login.css
+++ b/frontend/public/css/login.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url('../images/login/bg-login.png'); 
+    background-image: url('https://saoc.com.br/wp-content/uploads/2021/12/Qual-a-relacao-entre-saude-e-seguranca-do-trabalho-scaled.jpg'); 
     background-repeat: no-repeat; 
     background-size: cover;
     background-position: center;
