Correção das box de perguntas e das perguntas de modo randomico nos videos

--- a/frontend/public/css/blocks.css
+++ b/frontend/public/css/blocks.css
@@ -37,7 +37,7 @@
 
 }
 
-.content-block .content-block-access button{
+.content-block .content-block-access > button{
     padding: 5px;
     border-radius: 25px;
     width: 65%;
