Correções de stilo

--- a/frontend/public/css/menu.css
+++ b/frontend/public/css/menu.css
@@ -338,7 +338,7 @@ h2 {
 
     .footer{
         /* margin-top: 240vh; */
-        margin-top: 20px;
+        margin-top: 10px !important; 
     }
 
     .col.four {
